--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,5 @@ updates:
       interval: "weekly"
     open-pull-requests-limit: 10
     versioning-strategy: "auto"
+    allow:
+      - dependency-type: "all"
