--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,11 +36,12 @@ jobs:
 
     strategy:
       fail-fast: false
-    include:
-    - language: actions
-      build-mode: none
-    - language: python
-      build-mode: none
+      matrix:
+        include:
+         - language: actions
+           build-mode: none
+         - language: python
+           build-mode: none
     # CodeQL supports the following values keywords for 'language': 'actions', 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'rust', 'swift'
     # Use `c-cpp` to analyze code written in C, C++ or both
     # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
