--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -41,7 +41,7 @@ jobs:
          - language: actions
            build-mode: none
          - language: python
-           build-mode: autobuild
+           build-mode: none
     # CodeQL supports the following values keywords for 'language': 'actions', 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'rust', 'swift'
     # Use `c-cpp` to analyze code written in C, C++ or both
     # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -75,7 +75,8 @@ jobs:
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+      if: ${{ matrix.language != 'python' }}
+      uses: github/codeql-action/autobuild@v4
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -87,6 +88,31 @@ jobs:
     #- run: |
     #   make bootstrap
     #   make release
+
+    - name: Set up Python
+      if: ${{ matrix.language == 'python' }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+        
+    - name: Create venv and install Python dependencies
+      if: ${{ matrix.language == 'python' }}
+      env:
+        PIP_CONFIG_FILE: /dev/null
+      run: |
+        python -m venv .venv
+        . .venv/bin/activate
+        pip install --upgrade pip setuptools wheel build pyproject_hooks packaging
+        pip install -r requirements.txt
+
+    - name: Run tests
+      if: ${{ matrix.language == 'python' }}
+      env:
+        PIP_CONFIG_FILE: /dev/null
+      run: |
+        . .venv/bin/activate
+        pip install pytest
+        pytest -q
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
